--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     <p >Filter: </p>
                 </div>
                 <div class="col-10">
-                    <button class="btn btn-primary">All</button>
-                    <button class="btn btn-success">Open</button>
-                    <button class="btn btn-info">Close</button>
+                    <button class="btn btn-primary filter-all">All</button>
+                    <button class="btn btn-success filter-open">Open</button>
+                    <button class="btn btn-info filter-close">Close</button>
                 </div>
             </div>
             <br>
@@ -59,7 +59,7 @@
                     <p >Oder by: </p>
                 </div>
                 <div class="col-10 col-md-2 col-lg-2">
-                    <select name="" id="" class="form-control">
+                    <select name="" id="todo-order" class="form-control">
                         <option value="ASC">ASC</option>
                         <option value="DESC">DESC</option>
                     </select>
